[POOL-224] FindBugs performance warnings on StackKeyedObjectPool.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/pool/branches/POOL_1_X@1367304 13f79535-47bb-0310-9956-ffa450edef68